--- a/public/main.css
+++ b/public/main.css
@@ -30,6 +30,7 @@ body {
   margin: 0;
   border-bottom: solid 2px #bbb;
   box-shadow: 0 4px 2px -2px rgba(0,0,0,.2);
+  background-color: #80a1d6
 }
 
 .navList {
@@ -49,6 +50,7 @@ body {
   border-top-right-radius: 4px;
   border-left: solid 1px #bbb;
   text-decoration: none;
+  background-color: white;
 }
 
 .navLink {
