--- a/public/main.css
+++ b/public/main.css
@@ -70,6 +70,21 @@ body
 	overflow: hidden;
 	font-family: 'Raleway', sans-serif;
 }
+
+.loginTitle {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.loginTitle img {
+  max-width: 80px;
+  margin-right: 30px;
+}
+
 .video-container
 {
 	top: 0;
