--- a/public/main.css
+++ b/public/main.css
@@ -219,6 +219,7 @@ body
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 4px;
+    color: white;
 }
 
 .bold 
@@ -234,7 +235,11 @@ body
   font-weight: bold;
   margin-left: 8px;
 }
-
+.selected
+{
+  border: 2px solid black;
+  color: ##0D3F52;
+}
 .row 
 {
   position: relative;
@@ -246,17 +251,16 @@ body
 }
 .icon 
 {
+  height: 32px;
+  width: 32px;
   font-size: 18px;
-  width: 72px;
+  padding-left: 7px;
+  padding-right: 7px;
   display: flex;
   justify-content: center;
   font-weight: bold;
-}
-.top 
-{
   color: #FFEB3B;
 }
-
 .avatar 
 {
   width: 32px;
@@ -278,10 +282,20 @@ body
   margin-right: 8px;
   overflow: hidden;
 }
-
+.detail .name
+{
+  color: black;
+}
 .points 
 {
+  color: white;
   margin-right: 24px;
   font-weight: bold;
   white-space: nowrap;
 }
+
+/*a i
+{
+  height: 32px;
+  width: 32px;
+}*/
