--- a/public/main.css
+++ b/public/main.css
@@ -26,6 +26,13 @@ body {
   margin-right: 20px;
 }
 
+#pondCanvas {
+    background-color: white;
+    margin: 20px;
+    width: 100%
+    height: 100%
+}
+
 #layout {
   background-color: #80a1d6;
   min-height: 100vh;
