--- a/public/main.css
+++ b/public/main.css
@@ -29,8 +29,8 @@ body {
 #pondCanvas {
     background-color: white;
     margin: 20px;
-    width: 100%
-    height: 100%
+    width: 1500;
+    height: 700;
 }
 
 #layout {
