--- a/public/main.css
+++ b/public/main.css
@@ -28,9 +28,13 @@ body {
 
 #pondCanvas {
     background-color: white;
-    margin: 20px;
-    width: 1500;
-    height: 700;
+    margin: 0px 20px 20px 20px;
+}
+
+#pondlayout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #layout {
@@ -42,6 +46,10 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
+}
+
+#pondscore {
+    text-align:center;
 }
 
 .contentContainer {
